# MAX31855_raspi

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  example.cpp
src/: MAX31855.cpp  MAX31855.h  MAX31855soft.cpp  MAX31855soft.h  gpio.h  mcp23017_gpio.cpp  mcp23017_gpio.h
